--- a/frontend/backend/package.json
+++ b/frontend/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20"
   }
